src/index.css
body {
  margin: 0;
  font-family: 'Frank Ruhl Libre', serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.app-body {
  background-color: #00203D;
  padding-bottom: 1rem;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
}

a, p {
  font-family: 'Frank Ruhl Libre', serif;
  color: white;
  font-size: 1.1rem;
}

h1, h2, h3, h4 {
  font-family: 'Playfair Display', serif;
  color: white !important;
}

h1 {
  font-size: 3.5rem;
}

h2 {
  font-size: 1.75rem;
}

hr {
  border: 0;
  border-top: 3px solid #71B48D;
}

.bold {
  font-weight: bold;
}

.thin {
  font-weight: lighter;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
}

.splash {
  background-image: url('./Image/background.jpg');
  height: 85vh;
}

.logo {
  height: 50px;
  width: 50px;
}

.app {
  flex-direction: column;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.button-style {
  border: "2px solid gray";
  font-size: 1rem;
}

.large-black-heading {
  font-size: 3.5rem;
  text-shadow: 2px 1px rgb(255, 255, 255);
}

.primary-white-text, .ant-statistic-title, .ant-statistic-content, .ant-card-meta-title {
  color: white !important;
  font-family: 'Frank Ruhl Libre', serif !important;
}

.ant-card-meta-title {
  font-size: 1.5rem !important;
}

.ant-card-meta-description {
  color: rgba(255, 255, 255, 0.4) !important;
}

.ant-statistic-title {
  font-size: 1.25rem !important;
  font-weight: bold;
}

input.error {
  border-color: red;
}

.input-feedback {
  color: red;
  height: 5px;
  margin-top: -12px;
}

.card-poster {
  object-fit: cover;
  height: 375px;
  width: auto;
  margin: auto;
}

.no-image {
  width: auto;
  margin: auto;
  height: 375px;
}

.custom-row img {
  width: 'auto';
  height: 600px;
  object-fit: cover;
}

.actor-detail {
  box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
  margin: auto;
  border: '1px solid transparent';
  padding: 1.25rem;
  border-radius: 0.5rem;
  background-color: #2e91ee34;
  margin-top: 1.5rem;
}

.actor-detail-container {
  display: grid;
  width: 95vw;
  grid-template-columns: repeat(2, 1fr);
  justify-content: center;
  align-items: center;
  background-color: #004c943a;
  border-radius: 1rem;
  padding: 0rem 1rem 0rem 1rem;
  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.226);
}

.portrait {
  height: auto;
  border-radius: 1rem;
}

.poster {
  height: auto;
  border-radius: 1rem;
}

.main-detail {
  display: grid;
  width: 95vw;
  grid-template-columns: repeat(2, 1fr);
  justify-content: center;
  align-items: center;
}

.movie-info {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  justify-content: center;
  align-items: center;
  margin: auto;
}

.main-row {
  display: flex;
  justify-content: center;
  align-self: center;
}

.heading-text {
  font-weight: bold;
  color: #fff;
  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 40px #0ff;
}

.search-text {
  color: #fff;
  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #0ff;
}

.load-more-button {
  background-color: #71b48d59;
  padding: 1rem;
  border: 2px solid #71B48D;
  color: white;
  font-family: 'Playfair Display', serif;
  font-size: 1.25rem;
  cursor: pointer;
  transition: .4s;
  font-weight: bolder;
}

.load-more-button:hover {
  border: 2px solid green;
  background-color: green;
}

@media only screen and (max-width: 985px) {
  .biography {
    padding-top: 1rem;
    text-align: center;
  }
  .main-row {
    justify-content: center;
  }
  .poster {
    height: 375px;
  }
  .portrait {
    height: 375px;
  }
  .main-detail, .actor-detail-container {
    grid-template-columns: repeat(1, 1fr);
  }
  .movie-info {
    grid-template-columns: repeat(2, 1fr);
  }
  .card-poster {
    height: 300px
  }
  .no-image {
    height: 300px;
  }
  
  .circular-score {
    display: none;
  }
}

